[package]
name = "aoc"
version = "0.1.0"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
num-integer = "0.1.45"
rand = "0.8.5"
rustc-hash = "1.1.0"
z3 = "0.12.1"

[features]
verbose = []
